# MinoTracker

./: README.md
docker/: Dockerfile  docker-compose.yml
mino_description/: CMakeLists.txt  package.xml
mino_description/launch/: mino_description.launch.py  mino_rviz.launch.py
mino_description/meshes/: base.STL
mino_description/rviz/: rviz_config.rviz
mino_description/urdf/: mino.urdf.xacro
mino_gz/: CMakeLists.txt  package.xml
mino_gz/config/: mino_controller.yaml  rviz_config.rviz
mino_gz/launch/: mino_gz.launch.py  mino_gz_control.launch.py  mino_gz_description.launch.py  mino_gz_rviz.launch.py  mino_gz_sim.launch.py
mino_gz/rviz/: rviz_config.rviz
mino_gz/urdf/: mino_gz.urdf.xacro
mino_gz/worlds/: world.sdf
mino_hardware/: CMakeLists.txt  mino_hardware.xml  package.xml
mino_hardware/include/mino_hardware/: mino_hardware.hpp  mino_motors.hpp
mino_hardware/src/: mino_hardware.cpp  mino_motors.cpp
mino_irl/: CMakeLists.txt  package.xml
mino_irl/launch/: mino_irl.launch.py  mino_irl_control.launch.py  mino_irl_description.launch.py  mino_irl_rviz.launch.py  mino_irl_teleop.launch.py  mino_irl_twistmux.launch.py
mino_irl/urdf/: mino_irl.urdf.xacro
mino_mapper/: CMakeLists.txt  package.xml
mino_mapper/config/: mapper_params_online_async.yaml
mino_mapper/launch/: mino_mapper.launch.py
mino_mapper/maps/: simple_map.pgm  simple_map.yaml
mino_navigation/: CMakeLists.txt  package.xml
mino_navigation/config/: nav2_params.yaml
mino_slam/: CMakeLists.txt  package.xml
mino_twistmux/: CMakeLists.txt  package.xml
(+22 files in other folders)
